--- a/resumesite/templates/home.html
+++ b/resumesite/templates/home.html
@@ -160,7 +160,7 @@
 					<li>HTML, CSS, JS</li>
 					<li>C++</li>
 					<li>Java</li>
-					<li>Michrosoft(W, E, P)</li>
+					<li>Microsoft(W, E, P)</li>
 					<li>Photoshop</li>
 					<li>Video editing</li>
 				</ul>
